--- a/march2024.ipynb
+++ b/march2024.ipynb
@@ -28,6 +28,19 @@
     "\n",
     "A Bonus \"*\" will be given for finding the initial term a<sub>0</sub> of the sequence X<sub>2024</sub>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def "
+   ]
   }
  ],
  "metadata": {
